# flare

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .mcp.json  AGENTS.md  Common.lean  Dockerfile  Makefile  ORLib.lean  README.md  codecov.yml  experiment1.py  experiment2.py  experiment3.py  lake-manifest.json  lakefile.toml  lean-toolchain  lefthook.yml  pyproject.toml
.claude/agents/: milp-equivalence-autoformalizer.md  milp-formulator.md  milp-reviewer.md
.claude/skills/: lean-milp-formulation  lean-milp-reformulation
.claude/skills/autoformalize-milp-equivalence/: SKILL.md
.claude/skills/create-lean-milp-formulation/: SKILL.md  template.lean
.claude/skills/lean-milp-equivalence/: SKILL.md  template.lean
.claude/skills/lean-milp-formulation/: SKILL.md  template.lean
.github/workflows/: ci-python.yml  deploy-site.yml  release-dataset.yml  release-formulation-bench.yml  release-milp-flare.yml
dataset/: dataset.json
dataset/problems/p21/: data.json  description.md  problem.json  solution.json
dataset/reformulations/p21/: a_b.lean  a_c.lean  a_d.lean
docker/: Dockerfile  entrypoint.sh  lakefile.toml
experiments/: ablation.py  baseline.py  experiment1.py  experiment2.py  experiment3.py  utils.py
experiments/configs/: ablation.yaml  ablation_p12.yaml  baseline.yaml  baseline_flare.yaml  baseline_no_flare.yaml  experiment1.yaml  experiment2.yaml  experiment3.yaml
python/: pyproject.toml
python/milp_eq_tools/: __init__.py  codegen.py  dataset.py  formulation.py  models.py  pair.py  problem.py
python/tests/: conftest.py  test_dataset.py  test_formulation.py  test_pair.py  test_placeholder.py  test_problem.py
scripts/: agent_action_log.py  check-lean.sh  combine_runs.py  equivaproof_formulation_reviewer.py  extract_equivaproof_lean.py  extract_flare_lean.py  gen_hf_dataset.py  gen_solve.py  p7_plot.py  plot_agent_time.py  read_context_summary.py  reeval_claude_code.py  reeval_flare.py  report.py  report2.py  sync_results.py  time_cost_analysis.py  validate.py  validate_evocut.py
scripts/analysis/: context_analysis.py  plot_agent_time.py  time_cost_analysis.py
scripts/review/: extract_flare_lean.py  flare_formulation_reviewer.py
site/: AGENTS.md  README.md  astro.config.ts  bibliography.bib  package-lock.json  package.json
site/public/: CNAME
site/src/: paper.mdx
site/src/components/: Notes.astro  Picture.astro
site/src/pages/: index.astro
sources/EquivaFormulation/183/: optimus-code_0.py  optimus-code_2.py  optimus-code_3.py  optimus-code_6.py  optimus-code_8.py  optimus-code_9.py  optimus-code_c.py  optimus-code_d.py  optimus-code_e.py  optimus-code_f.py  optimus-code_g.py  optimus-code_h.py  optimus-code_i.py  optimus-code_j.py  optimus-code_k.py  optimus-code_l.py
sources/EquivaFormulation/217/: optimus-code_0.py  optimus-code_2.py  optimus-code_3.py  optimus-code_6.py  optimus-code_8.py  optimus-code_9.py  optimus-code_c.py  optimus-code_d.py  optimus-code_e.py  optimus-code_f.py  optimus-code_g.py  optimus-code_h.py  optimus-code_i.py  optimus-code_j.py  optimus-code_k.py  optimus-code_l.py
sources/EquivaFormulation/47/: optimus-code_0.py  optimus-code_2.py  optimus-code_3.py  optimus-code_6.py  optimus-code_8.py  optimus-code_9.py  optimus-code_c.py  optimus-code_d.py  optimus-code_e.py  optimus-code_f.py  optimus-code_g.py  optimus-code_i.py  optimus-code_j.py  optimus-code_k.py  optimus-code_l.py
sources/EquivaFormulation/74/: optimus-code_0.py  optimus-code_2.py  optimus-code_3.py  optimus-code_6.py  optimus-code_8.py  (+11 more)
src/: checker.py  claude_code_checker.py  equivamap_checker.py  execution_checker.py  llm_client.py  naive_llm_checker.py  prompt.py
src/analysis/: agent_jsonl.py
src/llm_client/: __init__.py  anthropic.py  base.py  deepseek.py  openai.py
src/prompts/: __init__.py  formulation.j2  formulation_description.md.j2  variable_mapping_schema.json
src/verify/: base.py  factory.py  flare.py  prompts.py
tests/harness/: conftest.py  test_claude_code.py  test_codex.py  test_docker.py  test_opencode.py
tests/verifiers/: conftest.py  test_factory.py  test_flare_adapter.py  test_run_interface.py  test_verifiers.py
(+402 files in other folders)
