[project]
name = "flare"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "gurobipy",
    "jinja2",
    "matplotlib>=3.10.9",
    "formulation-bench",
    "openai",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "tqdm",
    "tsplib95",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.workspace]
members = ["packages/formulation_bench"]

[tool.uv.sources]
formulation-bench = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
files = ["scripts", "src", "experiments"]
