[project]
name = "flare"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "gurobipy",
    "jinja2",
    "matplotlib>=3.10.9",
    "formulation-bench",
    "milp-flare",
    "openai",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "tqdm",
    "tsplib95",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.workspace]
members = ["packages/formulation_bench", "packages/milp_flare"]

[tool.uv.sources]
formulation-bench = { workspace = true }
milp-flare = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "types-PyYAML",
    "types-tqdm",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "packages/formulation_bench/tests",
    "packages/formulation_bench/src/formulation_bench",
    "packages/milp_flare/tests",
    "packages/milp_flare/src/milp_flare",
]
markers = [
    "docker: tests that require Docker (opt-out: -m 'not docker')",
    "gurobi: tests that require Gurobi (opt-out: -m 'not gurobi')",
]
addopts = "-m 'not docker' -n 5 --doctest-modules --import-mode=importlib"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/review/flare_formulation_reviewer.py" = ["E501"]
"dataset/**/gen_params.py" = ["E741"]  # single letter names for math notation
"dataset/**/gen_data.py" = ["E741"]  # single letter names for math notation

[tool.mypy]
strict = true
files = ["scripts", "src", "experiments"]
