[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "milp-eq-tools"
version = "0.1.0"
description = "Helper library for working with the AHD formal dataset"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
files = ["formulation_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
